deploy/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chaos-api
  labels:
    app.kubernetes.io/name: chaos
    app.kubernetes.io/part-of: heliantheon
spec:
  ingressClassName: traefik
  rules:
    - host: chaos.heliannuuthus.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: chaos
                port:
                  name: http
